style.css
@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600&display=swap');

:root {
    --root-font-size: 20px;
    --background-color-main: rgb(49, 47, 47);
    --background-color-flavour: rgba(88, 191, 243, 0.3);
    --background-color-light: white;
    --background-color-dark: rgba(0,0,0,0.8);
    --background-color-dark-hover: black;
    --font-color-nav: rgb(88, 212, 243);
    --font-color-dark-primary: black;
    --font-color-dark-secondary: rgba(0,0,0,0.6);
    --font-color-light-primary: white;
    --font-color-light-secondary: rgba(255,255,255,0.7);
    --font-color-flavour: rgb(88, 212, 243);
    font-size: var(--root-font-size);
}

html{
    scroll-behavior:smooth;
}

body {
    max-width: 100%;
    overflow-x: hidden;
    margin: 0;
    padding: 0;
    font-family: 'Quicksand', sans-serif;
    display: flex;
    flex-direction: column;
    
}

.container {
    display: grid;
    grid-template-rows: minmax(100vh, auto) minmax(50vh, auto) auto auto minmax(30vh, auto) auto 10vh;
}

#hero > header,
#skills > header,
#projects > header,
#contact > header {
    font-size: 2.5rem;
    font-weight: bold;
    text-align: center;
}

#hero,
#skills, 
#projects, 
#contact {
    padding: 2rem;
}

#hero {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 2rem;
    grid-column: 1;
    grid-row: 1 / 2;
    background-color: var(--background-color-main);
    color: var(--font-color-light-primary);
}

#hero > header {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 30px;
    justify-content: center;
    align-items: center;
    height: 100vh;
}

#hero > .my-intro {
    display: flex;
    flex-direction: column;

}

#hero .my-intro .my-name {
    font-size: 6rem;
    font-weight: 500;
    text-align: center;
    padding: 0;
    margin:0;
}

#hero .my-intro .my-title {
    font-size: 2rem;
    font-weight: 500;
    text-align: center;
}

#hero .my-photo {
    max-height: 500px;
    max-width: 500px;
}

#hero .my-photo > img {
    height: 100%;
    width: 100%;
    border-radius: 50%;
}

#hero > .divider {
    border: 0.05px solid rgba(255,255,255,0.1);
    width: 100%;
    padding: 0;
}

#hero > main {
    width: 80vw;
    display: grid;
    grid-template-columns: repeat(2, 1fr);

}

#hero > main > h1 {
    font-size: 3rem;
}

#hero > main > article > p {
    margin-bottom: 2rem;
    font-size: 1.5rem;
}

#hero > main > article > p > a {
    color: var(--font-color-flavour);
    font-weight: 500;
    text-decoration: none;
}

#hero > main > article > p > a:hover {
    text-decoration: underline;
}

#skills {
    background-color: rgba(0,0,0,0.05);
    font-size: 1.5rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    grid-template-rows: 150px auto;
    /* gap: 2rem; */
    padding: 2rem 2rem 2rem 2rem;
}

#skills > header {
    display: flex;
    align-items: center;
    justify-content: center;
}

#skills > header > h2 {
    /* margin: 0; */
}

#skills > main {
    width: 75vw;
    /* display: grid; */
    /* grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr)); */
    /* gap: 2rem; */
    /* justify-items: center; */

}

#skills > main > div > h4 {
    /* margin: 0; */
}

#skills > main > div {
    display: flex;
    flex-direction: column;
}

#skills > main > div > ul {
    display: flex;
    /* flex-direction: column; */
    flex-wrap: wrap;
    /* justify-content: space-between; */
    gap: 30px;
}

#skills > main > div > ul {
    margin: 0;
    padding-left: 1rem;
}

#skills > main > div > ul > li {
    color: var(--font-color-dark-secondary);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#skills > main > div > ul > li > i {
    font-size: 3rem;
}

#skills > main > div > ul > li > span {
    font-size: 1rem;
}

#skills .skills-language > ul > li {
    font-size: 1rem;
}

#projects {
    grid-column: 1;
    grid-row: 3 / 4;
    display: grid;
    grid-template-rows: 150px auto;
    /* gap: 2rem; */
    justify-items: center;
    margin-bottom: 3rem;
}

#projects > header {
    display: flex;
    align-items: center;
    justify-content: center;
}

#projects #projects-main {
    width: 90vw;
    display: grid;
    gap: 2rem;
}

#projects-main .project {
    display: grid;
    grid-template-columns: 400px 1fr;
    gap: 20px;
}

.project-info {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.project-info > header {
    font-size: 2rem;
}

.project-tech-stack > ul {
    display: flex;
    flex-wrap: wrap;
    gap: 5px;
    margin: 0;
    padding: 0;
    list-style-type: none;
}

.project-tech-stack > ul > li {
    background-color: var(--background-color-flavour);
    border-radius: 20px;
    padding: 5px 10px;
    font-size: 0.5rem;
}

p.project-description {
    color: var(--font-color-dark-secondary);
}

.project-links {
    display: flex;
    gap: 20px;
}

button.github-repo,
button.demo-link {
    padding: 15px 50px;
    background-color: var(--background-color-light);
    border: 1px solid var(--background-color-dark);
    cursor: pointer;
    transition: all 0.3s;
    border-radius: 5px;
}

button.github-repo:hover,
button.demo-link:hover {
    border: 1px solid var(--background-color-dark-hover);
    background-color: var(--background-color-dark-hover);
}

button.github-repo > a,
button.demo-link > a {
    text-decoration: none;
}

button.github-repo > a > span,
button.demo-link > a > span {
    color: var(--font-color-dark-primary);
    font-size: 1rem;
}

button.github-repo:hover > a > span,
button.demo-link:hover > a > span {
    color: var(--font-color-light-primary);
    font-size: 1rem;
}

.project-image {
    /* flex: 0; */
    display: flex;
    /* justify-content: space-around; */
    align-items: center;
    height: 400px;
    gap: 50px;
    overflow: scroll;
}
/* ... */

